Fixed the footer problem in start/activities and start/promote by disabling a CSS property in pu-wrap. This caused a modal sidebar menu malfunction, so this needed another, more complex fix.

--- a/app/client/stylesheets/components/pu-page.sass
+++ b/app/client/stylesheets/components/pu-page.sass
@@ -44,6 +44,20 @@
         margin-left: auto
         margin-right: auto
 
+    .pu-sub-fixedmodalsidebar
+        position: fixed
+        top: $spacing-modal-headerheight
+        left: 0
+        right: 0
+
+        .pu-wrap
+            position: relative
+
+            .pu-modalsidebar
+                position: absolute
+                right: 100%
+                top: 43px
+
     &-tinted
         background: $color-background-tertiery
 
